--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,6 +35,12 @@ main {
     display: inline-block;
 }
 
+#clear-btn,
+#reload-btn {
+    display: inline-block;
+    margin: 2rem auto;
+}
+
 .timer {
     margin-top: 2rem;
     margin-right: 4rem;
