Timer reduction on wrong answer working, timer=0 gameover working

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,7 +20,8 @@ main {
 }
 
 #question-container,
-#controls {
+#controls,
+#intro {
     margin-top: 2rem;
     justify-content: center;
     text-align: center;
